project('Surveillance_Sources')
surveillance_sources = [
                       'RemoteTarget.cpp',
                       'TargetId.cpp',
                       'AircraftType.cpp',
                       'TargetList.cpp',
                       'TrivialArrayExtender.cpp',
                       'TargetFriends.cpp',
                       'TrafficDatabases.cpp',
                       'RemoteTargetComputer.cpp',
                       'RemoteTargetComputerFactory.cpp',
                       'Glue.cpp',
                       'Adsb/AdsbTarget.cpp',
                       'Adsb/AdsbAircraftType.cpp',
                       'Adsb/AdsbComputer.cpp',
                       'Adsb/AdsbCalculations.cpp',
                       'Adsb/AdsbSystemStatus.cpp',
                       'Adsb/AdsbList.cpp',
                       'Flarm/FlarmTarget.cpp',
                       'Flarm/FlarmAircraftType.cpp',
                       'Flarm/FlarmComputer.cpp',
                       'Flarm/FlarmCalculations.cpp',
                       'Flarm/FlarmDetails.cpp',
                       'Flarm/FlarmFriends.cpp',
                       'Flarm/FlarmSystemStatus.cpp',
                       'Flarm/FlarmList.cpp',
                       'Flarm/FlarmNetRecord.cpp',
                       'Flarm/FlarmNetDatabase.cpp',
                       'Flarm/FlarmNameDatabase.cpp',
                       'Flarm/NameFile.cpp',

 ]
