project('Task_Sources')
task_sources = [
'Shapes/FAITriangleSettings.cpp',
'Shapes/FAITriangleRules.cpp',
'Shapes/FAITriangleArea.cpp',
'Shapes/FAITriangleTask.cpp',
'Shapes/FAITrianglePointValidator.cpp',
'TaskBehaviour.cpp',
'TaskManager.cpp',
'AbstractTask.cpp',
'Ordered/StartConstraints.cpp',
'Ordered/FinishConstraints.cpp',
'Ordered/Settings.cpp',
'Ordered/OrderedTask.cpp',
'Ordered/TaskAdvance.cpp',
'Ordered/SmartTaskAdvance.cpp',
'Ordered/Points/IntermediatePoint.cpp',
'Ordered/Points/OrderedTaskPoint.cpp',
'Ordered/Points/StartPoint.cpp',
'Ordered/Points/FinishPoint.cpp',
'Ordered/Points/ASTPoint.cpp',
'Ordered/Points/AATPoint.cpp',
'Ordered/AATIsoline.cpp',
'Ordered/AATIsolineSegment.cpp',
'Unordered/UnorderedTask.cpp',
'Unordered/UnorderedTaskPoint.cpp',
'Unordered/GotoTask.cpp',
'Unordered/AbortTask.cpp',
'Unordered/AlternateTask.cpp',
'Factory/AbstractTaskFactory.cpp',
'Factory/RTTaskFactory.cpp',
'Factory/FAITaskFactory.cpp',
'Factory/FAITriangleTaskFactory.cpp',
'Factory/FAIORTaskFactory.cpp',
'Factory/FAIGoalTaskFactory.cpp',
'Factory/AATTaskFactory.cpp',
'Factory/MatTaskFactory.cpp',
'Factory/MixedTaskFactory.cpp',
'Factory/TouringTaskFactory.cpp',
'Factory/Create.cpp',
'Points/TaskPoint.cpp',
'Points/SampledTaskPoint.cpp',
'Points/ScoredTaskPoint.cpp',
'Points/TaskLeg.cpp',
'ObservationZones/Boundary.cpp',
'ObservationZones/ObservationZoneClient.cpp',
'ObservationZones/ObservationZonePoint.cpp',
'ObservationZones/CylinderZone.cpp',
'ObservationZones/SectorZone.cpp',
'ObservationZones/LineSectorZone.cpp',
'ObservationZones/SymmetricSectorZone.cpp',
'ObservationZones/VariableKeyholeZone.cpp',
'ObservationZones/KeyholeZone.cpp',
'ObservationZones/AnnularSectorZone.cpp',
'PathSolvers/TaskDijkstra.cpp',
'PathSolvers/TaskDijkstraMin.cpp',
'PathSolvers/TaskDijkstraMax.cpp',
'PathSolvers/IsolineCrossingFinder.cpp',
'Solvers/TaskMacCready.cpp',
'Solvers/TaskMacCreadyTravelled.cpp',
'Solvers/TaskMacCreadyRemaining.cpp',
'Solvers/TaskMacCreadyTotal.cpp',
'Solvers/TaskBestMc.cpp',
'Solvers/TaskSolveTravelled.cpp',
'Solvers/TaskCruiseEfficiency.cpp',
'Solvers/TaskEffectiveMacCready.cpp',
'Solvers/TaskMinTarget.cpp',
'Solvers/TaskOptTarget.cpp',
'Solvers/TaskGlideRequired.cpp',
'Solvers/TaskSolution.cpp',
'Computer/ElementStatComputer.cpp',
'Computer/DistanceStatComputer.cpp',
'Computer/IncrementalSpeedComputer.cpp',
'Computer/TaskVarioComputer.cpp',
'Computer/TaskStatsComputer.cpp',
'Computer/WindowStatsComputer.cpp',
'Stats/CommonStats.cpp',
'Stats/ElementStat.cpp',
'Stats/TaskStats.cpp',
'Stats/StartStats.cpp',

 ]
